# MFC_GUI

./: .gitignore  CMakeLists.txt  MainDialog.cpp  MainDialog.h  MfcGui.rc  MfcGuiApp.cpp  MfcGuiApp.h  README.md  main.cpp  pch.h  resource.h
src/: MainWindow.cpp  MainWindow.h
